Cycles Render with light #92684

Closed
opened 2021-10-31 17:27:07 +01:00 by Kent Davis · 8 comments

System Information
Operating system: macOS-12.0.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.29

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-27 22:07, hash: a2f0f98271
Worked: (newest version of Blender that worked as expected)

Short description of error
Render Cycles

Exact steps for others to reproduce the error
image.png
Blender 2.90 to 2.93.5 it work on Cycles Render but Blender 3.0 and Blender 3.1.0 not work

Blender 2.90 - 2.93.5 https://imgur.com/a/bfG6DDi
Blender 3.0 - 3.1.0 https://imgur.com/a/W4dJKNl
Acrylic_measure_ruler_79657_autosave.blend

**System Information** Operating system: macOS-12.0.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.29 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-27 22:07, hash: `a2f0f98271` Worked: (newest version of Blender that worked as expected) **Short description of error** Render Cycles **Exact steps for others to reproduce the error** ![image.png](https://archive.blender.org/developer/F11641568/image.png) Blender 2.90 to 2.93.5 it work on Cycles Render but Blender 3.0 and Blender 3.1.0 not work Blender 2.90 - 2.93.5 https://imgur.com/a/bfG6DDi Blender 3.0 - 3.1.0 https://imgur.com/a/W4dJKNl [Acrylic_measure_ruler_79657_autosave.blend](https://archive.blender.org/developer/F11641609/Acrylic_measure_ruler_79657_autosave.blend)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

Added subscribers: @brecht, @ThomasDinges

Added subscribers: @brecht, @ThomasDinges

Optix is selected as Denoiser, that won't work with AMD cards. Change the denoiser in the Sampling -> Denoise panel.

@brecht Can we auto switch to OIDN if Optix is not available instead of failing to render?

Optix is selected as Denoiser, that won't work with AMD cards. Change the denoiser in the Sampling -> Denoise panel. @brecht Can we auto switch to OIDN if Optix is not available instead of failing to render?
Author

I ask them many times about iMac on AMD they ignore me as well. sigh.

I ask them many times about iMac on AMD they ignore me as well. sigh.
Author

Please fix everything back normal like Blender 2.93.5 copy code to Blender 3.0 and 3.1 support for iMac 27" and year 2017 thanks.

Please fix everything back normal like Blender 2.93.5 copy code to Blender 3.0 and 3.1 support for iMac 27" and year 2017 thanks.

This issue was referenced by blender/cycles@5d9a532619

This issue was referenced by blender/cycles@5d9a5326196fc2cc9ff2d0b1f07814b19df79fc5

This issue was referenced by 0ab1b19de4

This issue was referenced by 0ab1b19de4da2db53548d82d66c8ea5ed40e0f6c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-11-01 08:37:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92684
No description provided.