Fix T92684: Cycles does not fall back to OIDN if OptiX is not available